--- a/browser/base/content/newtab/newTab.css
+++ b/browser/base/content/newtab/newTab.css
@@ -14,7 +14,6 @@ body {
   padding: 0;
   margin: 0;
   background-color: #F9F9F9;
-  display: -moz-box;
   position: relative;
   -moz-box-flex: 1;
   -moz-user-focus: normal;
@@ -827,4 +826,11 @@ input[type=button] {
 #newtab-intro-buttons > input:hover {
   background-color: #2C72E2;
   color: #FFFFFF;
+}
+
+#meep {
+  width: 100%;
+  height: 100%;
+  border: none;
+  position: absolute;
 }
